<resources>
    <string name="app_name">ViewSonic System Update</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_bar_title">ViewSonic System Update</string>
    <string name="system_status">Your system is up-to-date</string>
    <string name="check_time">Last update check</string>
    <string name="check_update">Check Update</string>
    <string name="cancel_update">Cancel Update</string>
    <string name="progress">Download progress : </string>
    <string name="new_fw_detect">New firmware is detected. would you like to download?</string>
    <string name="new_fw_found">New System update file</string>
    <string name="tap_to_download">tap to download</string>
    <string name="tap_to_upgrade">tap to upgrade system</string>
    <string name="fw_feature">New firmware feature: </string>
    <string name="new_fw_download">System update file has been downloaded</string>
    <string name="new_fw">New Firmware</string>
    <string name="fw_download_install">New system update has been downloaded. Install it now? </string>
    <string name="fw_download_prompt">Notice:\n1. connect AC adaptor\n2. battery level is above 50%\n</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download_dlg_title">Firmware Download</string>
    <string name="download_dlg_message">Downloading</string>
    <string name="download_error_message">Download error!!</string>
    <string name="battery_error_message">Battery capacity is below 50%</string>
    <string name="AC_error_message">AC adaptor is not connected</string>
    <string name="file_error_message">System update file is not correct</string>
    <string name="confirm_reboot">System will reboot to continue update process</string>
    <string name="file_size">File size: </string>
</resources>
