<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/vs_logo_seethedifference"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <TextView android:text="@string/new_fw_detect" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:paddingTop="8dp"
        android:id="@+id/fw_detect" />
    <TextView android:text="@string/fw_feature" android:layout_width="640dp"
        android:layout_height="240dp"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:paddingTop="8dp"
        android:id="@+id/fw_feature" />
</LinearLayout>