<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <TextView android:text="@string/system_status" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:paddingTop="50dp"
        android:id="@+id/textView" />

    <TextView android:text="@string/check_time" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:paddingTop="150dp"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="240sp"
        android:layout_height="80sp"
        android:text="@string/check_update"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onCheckVersion"
        android:textSize="24dp" />

    <TextView
        android:layout_width="720sp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:paddingTop="25dp"
        android:id="@+id/update_time"
        android:layout_alignStart="@+id/button"
        android:layout_alignBottom="@+id/textView2"
        android:textColor="@android:color/holo_green_light"
        android:layout_below="@+id/textView" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar1"
        android:layout_alignTop="@+id/update_time"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:indeterminate="false"
        android:layout_alignParentEnd="true"
        android:max="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/percentage"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/update_time"
        android:textColor="@android:color/holo_orange_dark" />

</RelativeLayout>
